# mpl-token-metadata

./: Cargo.toml  deploy.sh
core/rust/utils/: Cargo.toml
core/rust/utils/src/: assertions.rs
macro/: Cargo.toml
program_ids/: owner.json  token-metadata.json
src/: lib.rs
src/assertions/: misc.rs
src/utils/: master_edition.rs  metadata.rs
