[package]
name = "mpl-utils"
version = "0.1.0"
edition = "2021"
description = "MPL Core Utils library"

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

[dependencies]
solana-program = "1.14"
borsh = "0.9.3"
arrayref = "0.3.6"
spl-token = { version = "3.2.0", features = ["no-entrypoint"], optional = true }

[features]
token = ["spl-token"]
default = ["token"]

[profile.release]
overflow-checks = true     # Enable integer overflow checks.
